Fixed a grid spacing issue that only shows up in Firefox

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -2,12 +2,34 @@
 	border: 1px solid #45d6e0
 }
 
+.black-bg{
+	background-color: #000000;
+}
+
+.zero-margin{
+	margin: 0px;
+	padding: 0px;
+}
+
+#app_container{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: table;
+}
+
+#app_container_middle{
+	display: table-cell;
+    vertical-align: middle;
+}
+
 #app {
 	width: 1200px;
 	height: 800px;
 	background-color: black;
 	position: relative;
-	/*box-sizing: border-box;*/
+	margin-right: auto;
+	margin-left: auto;
 }
 
 #playerPanel {
@@ -36,10 +58,11 @@
 	width: 50px;
 	height: 50px;
 	position: relative;
-	display: inline-block;
+	display: inline-block; 
+	vertical-align: top;
 	padding: 0;
 	margin: 0;
-	margin-bottom: -4px;
+	/*margin-bottom: -4px;*/
 }
 
 .hitMarker {
